--- a/gallery.html
+++ b/gallery.html
@@ -86,4 +86,4 @@
    </div>
 </main>
 
-<footer></footer>
+<footer class="m-2 p-3 text-center">Built with Bootstrap at CodeX Academy &copy; Vita Bates 2024 All Rights Reserved.</footer>
