--- a/index.html
+++ b/index.html
@@ -35,15 +35,26 @@
           </div>
         </div>
       </nav>
-    <div class="container m-2 p-1">
-     <h1 class="text-center">This is the Home page. </h1>
-     <p class="text-center"> There's not much to read up on here, but you can use the navigation bar at the top of the page to get wherever you need to go. </p>
-   
-</div>
+    
 <body>
+  <div class="container m-2 p-1">
+    <h1 class="text-center">This is the Home page. </h1>
+    <p class="text-center"> There's not much to read up on here, but you can use the navigation bar at the top of the page to get wherever you need to go. </p>  
+</div>
+
+<div class="d-grid gap-2 d-md-block text-center">
+  <a class="btn btn-primary" href="https://www.pexels.com/" role="button">Pexels</a>
+  <a class="btn btn-primary" href="https://getbootstrap.com/" role="button">getbootstrap</a>
+  <a class="btn btn-primary" href="https://www.canva.com/" role="button">Canva</a>
+</div>
+
+<footer class="m-2 p-3 text-center">Built with Bootstrap at CodeX Academy &copy; Vita Bates 2024 All Rights Reserved.</footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
 
     </script>
+
+    
 </body>
 </main>
 </html> 
