--- a/about.html
+++ b/about.html
@@ -41,6 +41,9 @@
             <img width="900px" alt="vita selfie" class="rounded mx-auto d-block" src="https://res.cloudinary.com/dr1co3dil/image/upload/v1720403178/IMG_2420_2_t97gcd.jpg">
             <p class="text-center">I love learning about the intricacy of coding, and how it meets design. One day, I aspire to be a well-versed web designer and software developer.</p>
         </div>
+
+        <footer class="m-2 p-3 text-center">Built with Bootstrap at CodeX Academy &copy; Vita Bates 2024 All Rights Reserved.</footer>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
     </body>
