--- a/feastdays.html
+++ b/feastdays.html
@@ -62,7 +62,8 @@
             </div>
         </div>
         </div>
-
+        <footer class="m-2 p-3 text-center">Built with Bootstrap at CodeX Academy &copy; Vita Bates 2024 All Rights Reserved.</footer>
+        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 </body>
